cmake_minimum_required(VERSION 3.14)
project(data_structure C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(data_structure
#        I_I_sequence_list1.c
#        I_II_linked_list.c I_II_linked_list2.c
#        II_I_Conversion.c
#        II_II_string_input.c
#        stack/sequence_stack.c
#        stack/linked_stack.c
#        tree/PreOrderTraverse.c
#        search/seq_search.c )
#        search/half_search.c
        sort/I_insert_sort.c graph/DFS.c tree/InOrderTraverse.c tree/PostOrderTraverse.c)
#        sort/II_merge_sort.c)
#        TODOI_I_sequence_list.c)
